--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <center> <p>Quer saber mais sobre este assunto?</p></center>
      <center><h2>Clique abaixo.</h2></center> 
 
-    <center> <a href="index.html"> <h1 style="font-size: 3vw;">Clique aqui</h1></a> </center>
+    <center> <a href="link.html"> <h1 style="font-size: 3vw;">Clique aqui</h1></a> </center>
      </div>
      </body>
      </html>
