--- a/link.html
+++ b/link.html
@@ -6,17 +6,20 @@
 </head>
 
 <body>
-    <a href="#Educacao">➤Educação</a>
-    <br>
-    <br>
-    <br>
-    <br>
-    <a href="#Metas">➤Metas</a>
-    <br>
-    <br>
-    <br>
-    <br>
-    <a href="#Videos">➤Videos</a>
+    <h1>Sumário</h1>
+    <a href="#Educacao">
+        <h1>➤Fatores que prejudicam</h1>
+    </a>
+
+
+    <a href="#Metas">
+        <h1>➤Metas do ODS 4</h1>
+
+    </a>
+
+    <a href="#Videos"><h1>➤Videos sobre ODS 4
+    </h1>
+    </a>
     <div id="bloco">
 
         <center>
@@ -90,17 +93,17 @@
         <center>
             <h1 id="Videos">▼Veja os videos abaixo!▼</h1>
         </center>
-        <center><iframe width="560" height="315" src="https://www.youtube.com/embed/htHKxLMIWrY?si=0-TpiLe99Ujkovh0"
+       <center> <iframe width="560" height="315" src="https://www.youtube.com/embed/htHKxLMIWrY?si=0-TpiLe99Ujkovh0"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe> </center>
-                <br>
-                <br>
-                <br>
-       <center> <iframe width="560" height="315" src="https://www.youtube.com/embed/LCRdSzZkjtQ?si=tbcvCwL0o5fN434c"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe></center>
+                allowfullscreen></iframe>  </center>
+        <br>
+        <br>
+        <br>
+        <center> <iframe width="560" height="315" src="https://www.youtube.com/embed/LCRdSzZkjtQ?si=tbcvCwL0o5fN434c"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen> </iframe> </center>
         </p>
     </div>
 </body>
